stop animation on component rendering so there is no animation flicker set notch width on compose

--- a/src/components/select/internal.css
+++ b/src/components/select/internal.css
@@ -147,6 +147,10 @@
   top: 21px;
 }
 
+:host(.mdw-no-animation) ::slotted(label) {
+  transition: none;
+}
+
 ::slotted(label:not(.mdw-empty-no-float)) {
   transform: translateY(-70%) scale(0.75);
 }
